# t3_chat

./: .gitignore  CICD_SETUP_GUIDE.md  README.md  S3_SETUP_GUIDE.md  deployment_guide.md
.github/workflows/: deploy.yml  test.yml
backend/: config.py  database.py  main.py  pyproject.toml  requirements.txt  test_s3.py
backend/agent/: __init__.py  graph.py  llm_provider.py  prompts.py  tools.py
backend/memory/: __init__.py  checkpointer.py  cleanup.py  manager.py  store.py
backend/middleware/: rate_limiter.py
backend/models/: __init__.py  schemas.py
backend/rag/: __init__.py  retriever.py  store.py
backend/routes/: __init__.py  chat.py  conversations.py  models.py  rag.py  users.py
backend/storage/: __init__.py  s3_client.py
backend/utils/: context_manager.py  token_counter.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/webhooks/clerk/: route.ts
frontend/src/components/: ChatArea.tsx  LoginPromptModal.tsx  MainLayout.tsx  MarkdownRenderer.tsx  SettingsModal.tsx  Sidebar.tsx  ThemeToggle.tsx  theme-provider.tsx
frontend/src/components/ui/: dropdown-menu.tsx  input.tsx  scroll-area.tsx  textarea.tsx
frontend/src/lib/: api.ts  chat-context.tsx
task-8/: main.py  mongo_rag.ipynb  requirements.txt  users.db
