[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.5",
    "pydantic>=2.12.5",
    "pymongo>=4.12.0",
    "pypdf>=6.6.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.40.0",
    "motor>=3.6.0",
    "pydantic-settings>=2.0.0",
    "langgraph-checkpoint-mongodb>=0.0.10",
    "langgraph-store-mongodb>=0.0.3",
    "sse-starlette>=2.0.0",
    "python-multipart>=0.0.21",
    "langchain-core>=1.2.7",
    "pdfplumber>=0.11.9",
    "numpy>=2.4.1",
    "tavily-python>=0.7.18",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "boto3>=1.42.28",
]
